--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">projectEcomm</string>
+    <string name="crear_una">Crear una</string>
+    <string name="iniciar_sesion">Iniciar Sesion</string>
+    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="correo_electronico">Correo Electronico</string>
 </resources>
