--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
     <string name="contrase_a">Contraseña</string>
     <string name="correo_electronico">Correo Electronico</string>
+    <string name="comic_anime">COMIC ANIME</string>
+    <string name="ver_todo">Ver Todo...</string>
+    <string name="eventos">EVENTOS!</string>
 </resources>
