--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
-    <string name="app_name">projectEcomm</string>
-    <string name="crear_una">Crear una</string>
+    <string name="app_name">ComicAnime</string>
+    <string name="crear_una">Crea una</string>
     <string name="iniciar_sesion">Iniciar Sesion</string>
     <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
     <string name="contrase_a">Contraseña</string>
     <string name="correo_electronico">Correo Electronico</string>
+    <string name="ver_todo">Ver Todo...</string>
+    <string name="eventos">EVENTOS!</string>
+    <string name="scanear">Scanear</string>
+    <string name="carrito">Carrito</string>
+    <string name="tu_cuenta">Tu Cuenta</string>
 </resources>
