--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="tu_cuenta">Tu Cuenta</string>
     <string name="iv_visor">Visor</string>
     <string name="btn_scan">Scanear</string>
+    <string name="agregar_al_carrito">Agregar al carrito</string>
 </resources>
